syntax = "proto3";

option go_package = "schema/register";
package register;

message DataKeeperRegisterRequest {
    string ip = 1;
    string port = 2;

}
message DataKeeperRegisterResponse {
    string data_keeper_id = 1;
    string success = 2;
}

service DataKeeperRegisterService {
    rpc Register (DataKeeperRegisterRequest) returns (DataKeeperRegisterResponse);
}

// Heart Beat
service HeartBeatService{
    rpc AlivePing(AlivePingRequest) returns (AlivePingResponse);
}

message AlivePingRequest{
    string data_keeper_id = 1;
}
message AlivePingResponse{
    string success = 1;
}


// protoc --go_out=. --go-grpc_out=.  ./schema/register/register.proto