syntax = "proto3";

package replicate;

option go_package ="schema/replicate";

// Master Notify DST 
message NotifyToCopyRequest{
    string file_name=1;
    string src_address=2;
}
message NotifyToCopyResponse{
    string status=1;
}

//DST want to copy from SRC
message CopyingRequest{
    string file_name=1;
}
message CopyingResponse{
    oneof data{
        FileInfo file_info=1;
        bytes chuck_data = 2;
    }
}
message FileInfo{
    string file_name = 1;
}

// DST Comfirm copying
message ConfirmCopyRequest{
    string file_name=1;
}
message ConfirmCopyResponse{
    string status=1;
}
//services
service ReplicateService{
 rpc NotifyToCopy(NotifyToCopyRequest) returns (NotifyToCopyResponse);
//  rpc Copying(CopyingRequest) returns (stream CopyingResponse);
//  rpc ConfirmCopy(ConfirmCopyRequest) returns (ConfirmCopyResponse);
}

// protoc --go_out=. --go-grpc_out=.  ./schema/replicate/replicate.proto
